1999-11-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* semi-def.el (mime-insert-button): Don't use xpm buttons under TTY.
	(mime-create-xpm-button): Use `mime-xpm-button-glyph-cache'.
	(mime-xpm-button-glyph-cache): New variable.
	(TopLevel): Don't use xpm buttons if the feature `xpm' is not
	provided.
	(TopLevel): Require `alist'.

1999-11-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* semi-def.el (mime-insert-button): Funcall
	`mime-create-button-function'.
	(mime-create-button-function): New user option.
	(mime-create-xpm-button): New function.
	(mime-xpm-button-background): New user option.
	(mime-xpm-button-foreground): New user option.
	(mime-xpm-button-shadow-thickness): New user option.
	(mime-create-widget-button): New function.
	(mime-button-mouse-face, mime-button-face): Remove.

	* mime-ui-ja.texi (mime-button-mouse-face, mime-button-face):
	Remove.
	* mime-ui-ja.sgml: Likewise.
	* mime-ui-en.texi: Likewise.
	* mime-ui-en.sgml: Likewise.

1999-11-01  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-view.el (mime-display-application/x-postpet): New function.
	(mime-preview-condition): Set up for
	'mime-preview-application/x-postpet.
	(unpack): New macro.
	(unpack-skip): New function.
	(unpack-fixed): New function.
	(unpack-byte): New function.
	(unpack-short): New function.
	(unpack-long): New function.
	(unpack-string): New function.
	(unpack-string-sjis): New function.
	(postpet-decode): New function.

1999-10-17  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* SEMI-MK (install-semi-package): Delte auto-autoloads.el
	and custom-load.el


1999-10-17  Katsumi Yamaoka   <yamaoka@jpl.org>

	* WEMI: Version 1.13.7 (Shimada) released.

1999-10-06  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-move-to-upper): Scroll
	according to mime-preview-move-scroll.

1999-10-05  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-scroll-down-entity,
	mime-preview-scroll-up-entity): Recenter when moving to